--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
-group 'com.bhencke.micloc'
-version '1.0-SNAPSHOT'
+plugins {
+    id 'java'
+    id 'idea'
+    id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'application'
+}
 
-apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
@@ -12,3 +15,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+
+mainClassName = "com.bhencke.micloc.MicLocTeensy31"
